<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Cable Managemet</string>

    <!-- Label for overflow menu option that inserts fake pet data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all pet data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Data</string>

    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a pet [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a customer</string>

    <!-- Title for the activity to add a new pet [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_pet">Add a Customer</string>

    <!-- Title for the activity to update a existing pet [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_pet">Edit a Customer</string>

    <!-- Label for editor menu option to save pet and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current pet [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Toast message in editor when new pet has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_pet_successful">Customer saved</string>

    <!-- Toast message in editor when new pet has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_pet_failed">Error with saving Customer</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Label for gender information in the editor [CHAR LIMIT=30] -->
    <string name="category_mobile">Mobile Number</string>

    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="category_measurement">Measurement</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_customer_name">Cusromer Name</string>

    <!-- Text hint for breed field in the editor [CHAR LIMIT=30] -->
    <string name="hint_customer_account">Customer Account</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_mobile">Mobile Number</string>

    <!-- Label for dropdown menu option if the pet's gender is unknown [CHAR LIMIT=20] -->
    <string name="gender_unknown">Unknown</string>

    <!-- Label for dropdown menu option if the pet is male [CHAR LIMIT=20] -->
    <string name="gender_male">Male</string>

    <!-- Label for dropdown menu option if the pet is female [CHAR LIMIT=20] -->
    <string name="gender_female">Female</string>

    <!-- Text for update failed toast -->
    <string name="editor_update_failed">Update Failed</string>

    <!-- Text for update failed toast -->
    <string name="editor_update_successful">Update Success</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current pet [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Dialog message to ask the user to confirm deleting the current pet [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this pet?</string>

    <!-- Dialog button text for the option to confirm deleting the current pet [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current pet [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Toast message in editor when current pet has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_failed">Error with deleting customer</string>

    <!-- Toast message in editor when current pet was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_successful">Customer deleted</string>

    <string name="entry_debit">Add Debit</string>

    <string name="entry_credit">Add Credit</string>
</resources>
