<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_overview" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <EditText
                android:id="@+id/edit_customername"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_customer_name"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/edit_account"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_customer_account"
                android:inputType="textCapWords" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_mobile" />

        <EditText
            android:id="@+id/edit_mobile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_mobile"
            android:textAppearance="?android:textAppearanceMedium" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/spinne_layout">

        <Spinner
            android:id="@+id/select_entry"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:paddingLeft="20dp"
            android:spinnerMode="dropdown" />

        <EditText
            android:id="@+id/amount_edit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="Amount" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/date_layout">

        <TextView
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:paddingLeft="20dp"
            android:text="Date" />

        <EditText
            android:id="@+id/date_edit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="Date" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/receipt_layout">

        <TextView
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:paddingLeft="20dp"
            android:text="Receipt Number" />

        <EditText
            android:id="@+id/receipt_edit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="Receipt Number" />
    </LinearLayout>

</LinearLayout>